--- a/bonus/index.html
+++ b/bonus/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>mio es</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
@@ -23,26 +23,22 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-12 col-md-8 forum">
-                    <input v-model="newTask" placeholder="scrivi la task" @keyup.enter="push" type="text">
-
+                    <input v-model="newTask" placeholder="scrivi la task" @keyup.enter="goTo" type="text">
+                    <input v-model="newTaskType" placeholder="mayby, must, should" @keyup.enter="push" type="text">
                     <button @click="push">Aggiungi</button>
                 </div>
             </div>
-
-        </div>
-        <div class="row justify-content-center">
-            <div class="col-12 col-md-8 list">
-                <ul>
-                    <li v-for="">
-                        <span>{{task}}</span>
-                        <i class="fas fa-times-circle" @click="remove"></i>
-                    </li>
-                </ul>
+            <div class="row justify-content-center">
+                <div class="col-12 col-md-8 list">
+                    <ul>
+                        <li v-for="(task, index) in toDoList" :class="task.taskType">
+                            <span>{{task.nameTask}}</span>
+                            <i class="fas fa-times-circle" @click="remove(index)"></i>
+                        </li>
+                    </ul>
+                </div>
             </div>
-
         </div>
-    </div>
-
     </div>
 
 
